implemented Landlord Regsitration

--- a/Views/Landlord/LandlordIndex.cshtml
+++ b/Views/Landlord/LandlordIndex.cshtml
@@ -31,5 +31,5 @@
 </table>
 
 <p>
-    <a asp-action="LandlordCreate">Create New</a>
+    <a asp-action="LandlordRegistration">Register as a Landlord</a>
 </p>
