--- a/Views/Landlord/LandlordRegistration.cshtml
+++ b/Views/Landlord/LandlordRegistration.cshtml
@@ -15,6 +15,10 @@
         <label for="Email">Email:</label>
         <input type="email" class="form-control" id="Email" name="Email" value="@Model.Email" />
     </div>
+    <div class="form-group">
+        <label for="Password">Password:</label>
+        <input type="password" class="form-control" id="Password" name="Password" value="@Model.Password" />
+    </div>
     <button type="submit" class="btn btn-primary">Register</button>
 </form>
 
