Set up StudentContext, Made minor changes to navigation in the app

--- a/Views/Student/StudentIndex.cshtml
+++ b/Views/Student/StudentIndex.cshtml
@@ -30,4 +30,4 @@
     </tbody>
 </table>
 
-<a asp-action="StudentCreate" class="btn btn-primary">Create New Student</a>
+<a asp-action="StudentRegistration" class="btn btn-primary">Register Student</a>
