--- a/Data/Create.cshtml
+++ b/Data/Create.cshtml
@@ -7,36 +7,36 @@
 
 <h1>Create</h1>
 
-<h4>Student</h4>
+<h4>Property</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Student.Password" class="control-label"></label>
-                <input asp-for="Student.Password" class="form-control" />
-                <span asp-validation-for="Student.Password" class="text-danger"></span>
+                <label asp-for="Property.LandlordID" class="control-label"></label>
+                <input asp-for="Property.LandlordID" class="form-control" />
+                <span asp-validation-for="Property.LandlordID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Student.FirstName" class="control-label"></label>
-                <input asp-for="Student.FirstName" class="form-control" />
-                <span asp-validation-for="Student.FirstName" class="text-danger"></span>
+                <label asp-for="Property.Address" class="control-label"></label>
+                <input asp-for="Property.Address" class="form-control" />
+                <span asp-validation-for="Property.Address" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Student.LastName" class="control-label"></label>
-                <input asp-for="Student.LastName" class="form-control" />
-                <span asp-validation-for="Student.LastName" class="text-danger"></span>
+                <label asp-for="Property.RentAmount" class="control-label"></label>
+                <input asp-for="Property.RentAmount" class="form-control" />
+                <span asp-validation-for="Property.RentAmount" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Student.Email" class="control-label"></label>
-                <input asp-for="Student.Email" class="form-control" />
-                <span asp-validation-for="Student.Email" class="text-danger"></span>
+                <label asp-for="Property.Description" class="control-label"></label>
+                <input asp-for="Property.Description" class="form-control" />
+                <span asp-validation-for="Property.Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Student.PhoneNumber" class="control-label"></label>
-                <input asp-for="Student.PhoneNumber" class="form-control" />
-                <span asp-validation-for="Student.PhoneNumber" class="text-danger"></span>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="Property.IsAvailable" /> @Html.DisplayNameFor(model => model.Property.IsAvailable)
+                </label>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
