--- a/Data/Delete.cshtml
+++ b/Data/Delete.cshtml
@@ -9,43 +9,43 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Student</h4>
+    <h4>Property</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Student.Password)
+            @Html.DisplayNameFor(model => model.Property.LandlordID)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Student.Password)
+            @Html.DisplayFor(model => model.Property.LandlordID)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Student.FirstName)
+            @Html.DisplayNameFor(model => model.Property.Address)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Student.FirstName)
+            @Html.DisplayFor(model => model.Property.Address)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Student.LastName)
+            @Html.DisplayNameFor(model => model.Property.RentAmount)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Student.LastName)
+            @Html.DisplayFor(model => model.Property.RentAmount)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Student.Email)
+            @Html.DisplayNameFor(model => model.Property.Description)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Student.Email)
+            @Html.DisplayFor(model => model.Property.Description)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Student.PhoneNumber)
+            @Html.DisplayNameFor(model => model.Property.IsAvailable)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Student.PhoneNumber)
+            @Html.DisplayFor(model => model.Property.IsAvailable)
         </dd>
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="Student.StudentID" />
+        <input type="hidden" asp-for="Property.PropertyID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
