--- a/Data/Details.cshtml
+++ b/Data/Details.cshtml
@@ -8,42 +8,42 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Student</h4>
+    <h4>Property</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Student.Password)
+            @Html.DisplayNameFor(model => model.Property.LandlordID)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Student.Password)
+            @Html.DisplayFor(model => model.Property.LandlordID)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Student.FirstName)
+            @Html.DisplayNameFor(model => model.Property.Address)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Student.FirstName)
+            @Html.DisplayFor(model => model.Property.Address)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Student.LastName)
+            @Html.DisplayNameFor(model => model.Property.RentAmount)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Student.LastName)
+            @Html.DisplayFor(model => model.Property.RentAmount)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Student.Email)
+            @Html.DisplayNameFor(model => model.Property.Description)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Student.Email)
+            @Html.DisplayFor(model => model.Property.Description)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Student.PhoneNumber)
+            @Html.DisplayNameFor(model => model.Property.IsAvailable)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Student.PhoneNumber)
+            @Html.DisplayFor(model => model.Property.IsAvailable)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Student?.StudentID">Edit</a> |
+    <a asp-page="./Edit" asp-route-id="@Model.Property?.PropertyID">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
