basic functionalities working

--- a/Views/Property/PropertyIndex.cshtml
+++ b/Views/Property/PropertyIndex.cshtml
@@ -18,7 +18,7 @@
         {
             <tr>
                 <td>@property.PropertyID</td>
-                <td>@property.LandlordID</td>
+                <td>@property.TempLandlordID</td>
                 <td>@property.Address</td>
                 <td>@property.RentAmount</td>
                 <td>@property.Description</td>
