--- a/Views/Property/PropertyCreate.cshtml
+++ b/Views/Property/PropertyCreate.cshtml
@@ -4,16 +4,24 @@
 
 <form asp-action="PropertyCreate" method="post">
     <div class="form-group">
+        <label for="TempLandlordID">Landlord ID:</label>
+        <input type="text" class="form-control" id="TempLandlordID" name="TempLandlordID" value="@Model.TempLandlordID" />
+        <span asp-validation-for="TempLandlordID" class="text-danger"></span>
+    </div>
+    <div class="form-group">
         <label for="Address">Address:</label>
         <input type="text" class="form-control" id="Address" name="Address" value="@Model.Address" />
+        <span asp-validation-for="Address" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label for="RentAmount">Rent Amount:</label>
         <input type="text" class="form-control" id="RentAmount" name="RentAmount" value="@Model.RentAmount" />
+        <span asp-validation-for="RentAmount" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label for="Description">Description:</label>
         <textarea class="form-control" id="Description" name="Description">@Model.Description</textarea>
+        <span asp-validation-for="Description" class="text-danger"></span>
     </div>
 
     <button type="submit" class="btn btn-primary">Create</button>
