--- a/Views/Student/StudentRegistration.cshtml
+++ b/Views/Student/StudentRegistration.cshtml
@@ -6,14 +6,22 @@
     <div class="form-group">
         <label for="FirstName">First Name:</label>
         <input type="text" class="form-control" id="FirstName" asp-for="FirstName" />
+        <span asp-validation-for="FirstName" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label for="LastName">Last Name:</label>
         <input type="text" class="form-control" id="LastName" asp-for="LastName" />
+        <span asp-validation-for="LastName" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label for="Email">Email:</label>
         <input type="email" class="form-control" id="Email" asp-for="Email" />
+        <span asp-validation-for="Email" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label for="Password">Password:</label>
+        <input type="password" class="form-control" id="Password" asp-for="Password" />
+        <span asp-validation-for="Password" class="text-danger"></span>
     </div>
 
     <button type="submit" class="btn btn-primary">Register</button>
