--- a/Views/Landlord/LandlordDetails.cshtml
+++ b/Views/Landlord/LandlordDetails.cshtml
@@ -15,6 +15,12 @@
     <dt class="col-sm-2">Email:</dt>
     <dd class="col-sm-10">@Model.Email</dd>
 
+    <dt class="col-sm-2">Owned Properties: </dt>
+    <dd class="col-sm-10">
+        <a asp-action="LandlordProperties" asp-route-id="@Model.LandlordID">View Owned Properties</a>
+    </dd>
+
+
 </dl>
 
 <p>
