--- a/Views/Property/PropertyCreate.cshtml
+++ b/Views/Property/PropertyCreate.cshtml
@@ -23,6 +23,17 @@
         <textarea class="form-control" id="Description" name="Description">@Model.Description</textarea>
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
+    <div class="form-group">
+        <label for="IsAvailable">Is Available:</label>
+        <div>
+            <input type="radio" id="IsAvailableYes" name="IsAvailable" value="true" checked>
+            <label for="IsAvailableYes">Yes</label>
+        </div>
+        <div>
+            <input type="radio" id="IsAvailableNo" name="IsAvailable" value="false">
+            <label for="IsAvailableNo">No</label>
+        </div>
+    </div>
 
     <button type="submit" class="btn btn-primary">Create</button>
 </form>
