--- a/Views/Property/PropertyDetails.cshtml
+++ b/Views/Property/PropertyDetails.cshtml
@@ -20,6 +20,13 @@
 
     <dt class="col-sm-2">Is Available:</dt>
     <dd class="col-sm-10">@Model.IsAvailable</dd>
+
+    <dt class="col-sm-2">Owned By:</dt>
+    <dd class="col-sm-10"><a asp-action="LandlordDetails" asp-controller="Landlord" asp-route-id="@Model.TempLandlordID">Landlord Details</a></dd>
+
+    
+
+
 </dl>
 
 <p>
