--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,17 +4,21 @@
 
 <div>
     <h2>Student Actions</h2>
-    <ul>
-        <li><a asp-controller="Student" asp-action="StudentRegistration">Student Registration</a></li>
+    <ul>        
+        <li><a asp-controller="Student" asp-action="StudentIndex">Student Index</a></li>
+        <li><a asp-controller="Student" asp-action="StudentDetails">Student Details</a></li>
         <li><a asp-controller="Student" asp-action="StudentLogin">Student Login</a></li>
+        <li><a asp-controller="Student" asp-action="StudentRegistration">Student Registration</a></li>
     </ul>
 </div>
 
 <div>
     <h2>Landlord Actions</h2>
     <ul>
-        <li><a asp-controller="Landlord" asp-action="LandlordRegistration">Landlord Registration</a></li>
+        <li><a asp-controller="Landlord" asp-action="LandlordIndex">Landlord Index</a></li>
+        <li><a asp-controller="Landlord" asp-action="LandlordDetails">Landlord Details</a></li>
         <li><a asp-controller="Landlord" asp-action="LandlordLogin">Landlord Login</a></li>
+        <li><a asp-controller="Landlord" asp-action="LandlordRegistration">Landlord Registration</a></li>
     </ul>
 </div>
 
@@ -22,8 +26,8 @@
     <h2>Property Actions</h2>
     <ul>
         <li><a asp-controller="Property" asp-action="PropertyIndex">Property Index</a></li>
-
+        <li><a asp-controller="Property" asp-action="PropertyDetails">Property Details</a></li>
         @* in the future this will be a landlord action *@
-        <li><a asp-controller="Property" asp-action="PropertyCreate">Property Create</a></li>
+        <li><a asp-controller="Property" asp-action="PropertyCreate">Property Create</a></li
     </ul>
 </div>
