--- a/Views/Landlord/LandlordLogin.cshtml
+++ b/Views/Landlord/LandlordLogin.cshtml
@@ -15,5 +15,5 @@
 </form>
 
 <p>
-    <a asp-action="LandlordIndex">Back to List</a>
+    <a asp-action="LandlordRegistration">Register as a Landlord</a>
 </p>
