--- a/Views/Landlord/LandlordProperties.cshtml
+++ b/Views/Landlord/LandlordProperties.cshtml
@@ -27,5 +27,6 @@
 </table>
 
 <p>
-    <a asp-action="CreateProperty">Add New Property</a>
+    <dd class="col-sm-10"><a asp-action="PropertyCreate" asp-controller="Property" asp-route-id="">Create a new Property Listing</a></dd>
+
 </p>
