--- a/Views/Landlord/LandlordRegistration.cshtml
+++ b/Views/Landlord/LandlordRegistration.cshtml
@@ -23,5 +23,5 @@
 </form>
 
 <p>
-    <a asp-action="LandlordIndex">Back to List</a>
+    <a asp-action="LandlordLogin">Log in as a Landlord</a>
 </p>
