--- a/Views/Property/PropertyCreate.cshtml
+++ b/Views/Property/PropertyCreate.cshtml
@@ -39,5 +39,5 @@
 </form>
 
 <p>
-    <a asp-action="PropertyIndex">Back to Property List</a>
+    <a asp-action="PropertyIndex">Back to the list of all Properties</a>
 </p>
