--- a/Views/Property/PropertyDetails.cshtml
+++ b/Views/Property/PropertyDetails.cshtml
@@ -24,11 +24,8 @@
     <dt class="col-sm-2">Owned By:</dt>
     <dd class="col-sm-10"><a asp-action="LandlordDetails" asp-controller="Landlord" asp-route-id="@Model.TempLandlordID">Landlord Details</a></dd>
 
-    
-
-
 </dl>
 
 <p>
-    <a asp-action="PropertyIndex">Back to Property List</a>
+    <a asp-action="PropertyIndex">Back to the list of all Properties</a>
 </p>
