--- a/Views/Property/PropertyIndex.cshtml
+++ b/Views/Property/PropertyIndex.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<StudentHousingApp.Models.Property>
 
-<h2>Property Index</h2>
+<h2>All Properties</h2>
 
 <table class="table">
     <thead>
@@ -28,5 +28,3 @@
         }
     </tbody>
 </table>
-
-<a asp-action="PropertyCreate" class="btn btn-primary">Create New Property</a>
