--- a/Views/Student/StudentLogin.cshtml
+++ b/Views/Student/StudentLogin.cshtml
@@ -15,5 +15,5 @@
 </form>
 
 <p>
-    <a asp-action="StudentIndex">Back to Student List</a>
+    <a asp-action="StudentRegistration">Register as a Student</a>
 </p>
