--- a/Views/Shared/_Layout.cshtml.css
+++ b/Views/Shared/_Layout.cshtml.css
@@ -11,6 +11,10 @@ a {
   color: #0077cc;
 }
 
+.text-grey {
+    color: grey !important;
+}
+
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
