--- a/Views/Landlord/LandlordDelete.cshtml
+++ b/Views/Landlord/LandlordDelete.cshtml
@@ -1,20 +1,24 @@
 ﻿@model StudentHousingApp.Models.Landlord
 
-<h2>Delete Landlord</h2>
+<div class="container mt-5">
+    <h2>Delete Landlord</h2>
 
-<p>Are you sure you want to delete this landlord?</p>
-<dl class="dl-horizontal">
-    <dt>
-        @Html.DisplayNameFor(model => model.FirstName)
-    </dt>
-    <dd>
-        @Html.DisplayFor(model => model.FirstName)
-    </dd>
+    <p>Are you sure you want to delete this landlord?</p>
 
-</dl>
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.FirstName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.FirstName)
+        </dd>
+    </dl>
 
-<form asp-action="LandlordDeleteConfirmed" asp-route-id="@Model.LandlordID" method="post">
-    <input type="submit" value="Delete" class="btn btn-danger" />
-    <a asp-action="LandlordIndex" class="btn btn-primary">Back to List</a>
-</form>
-
+    <form asp-action="LandlordDeleteConfirmed" asp-route-id="@Model.LandlordID" method="post">
+        <div class="form-group">
+            <input type="submit" value="Delete" />
+        </div>
+    </form>
+    <br>
+    <a asp-action="LandlordIndex">Back to List</a>
+</div>
