--- a/Views/Property/PropertyDetails.cshtml
+++ b/Views/Property/PropertyDetails.cshtml
@@ -1,31 +1,34 @@
 ﻿@model StudentHousingApp.Models.Property
 
-<h2>Property Details</h2>
+<div class="container mt-4">
+    <h2>Property Details</h2>
 
-<dl class="row">
-    <dt class="col-sm-2">Property ID:</dt>
-    <dd class="col-sm-10">@Model.PropertyID</dd>
+    <dl class="row">
+        <dt class="col-sm-2">Property ID:</dt>
+        <dd class="col-sm-10">@Model.PropertyID</dd>
 
-    <dt class="col-sm-2">Landlord ID:</dt>
-    <dd class="col-sm-10">@Model.TempLandlordID</dd>
+        <dt class="col-sm-2">Landlord ID:</dt>
+        <dd class="col-sm-10">@Model.TempLandlordID</dd>
 
-    <dt class="col-sm-2">Address:</dt>
-    <dd class="col-sm-10">@Model.Address</dd>
+        <dt class="col-sm-2">Address:</dt>
+        <dd class="col-sm-10">@Model.Address</dd>
 
-    <dt class="col-sm-2">Rent Amount:</dt>
-    <dd class="col-sm-10">@Model.RentAmount</dd>
+        <dt class="col-sm-2">Rent Amount:</dt>
+        <dd class="col-sm-10">@Model.RentAmount</dd>
 
-    <dt class="col-sm-2">Description:</dt>
-    <dd class="col-sm-10">@Model.Description</dd>
+        <dt class="col-sm-2">Description:</dt>
+        <dd class="col-sm-10">@Model.Description</dd>
 
-    <dt class="col-sm-2">Is Available:</dt>
-    <dd class="col-sm-10">@Model.IsAvailable</dd>
+        <dt class="col-sm-2">Is Available:</dt>
+        <dd class="col-sm-10">@Model.IsAvailable</dd>
 
-    <dt class="col-sm-2">Owned By:</dt>
-    <dd class="col-sm-10"><a asp-action="LandlordDetails" asp-controller="Landlord" asp-route-id="@Model.TempLandlordID">Landlord Details</a></dd>
+        <dt class="col-sm-2">Owned By:</dt>
+        <dd class="col-sm-10">
+            <a asp-action="LandlordDetails" asp-controller="Landlord" asp-route-id="@Model.TempLandlordID">Landlord Details</a>
+        </dd>
+    </dl>
 
-</dl>
-
-<p>
-    <a asp-action="PropertyIndex">Back to the list of all Properties</a>
-</p>
+    <p>
+        <a asp-action="PropertyIndex">Back to the list of all Properties</a>
+    </p>
+</div>
